--- a/password.css
+++ b/password.css
@@ -1,1 +1,40 @@
+body{
+	background-color: #301934;
+}
+.container {
+	position: relative;
+	padding: 1em;
+	width: 25vw;
+	height: 25vw;
+	background: rgba(255,255,255,.2);
+	box-shadow: 0 5px 15px rgba(0,0,0,.5);
+		}
+.INC {
+	font-family: sans-serif
+;
+	font-size: 30px;
+	text-align: center;
+	position: absolute;
+	width: 80%;
+	top: 0;
+}
+.container-2 {
+	position: relative;
+	bottom: 355px;
+	left: 370px;
+	padding: 1em;
+	width: 50vw;
+	height: 25vw;
+	background: rgba(255,255,255,.2);
+	box-shadow: 0 5px 15px rgba(0,0,0,.5);
+		}
 
+.INC-2 {
+	font-family: sans-serif
+;
+	font-size: 30px;
+	text-align: center;
+	position: absolute;
+	width: 80%;
+	top: 0;
+}
