--- a/Webpage.css
+++ b/Webpage.css
@@ -1,119 +1,109 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:500');
-
-* {
-    box-sizing: border-box;
-	 margin: 0;
-    padding: 0;
-}
-header {
-    margin: 0;
-    padding: 0;
-	 background-color: #24252A;
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
 }
 
-li, a, button {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: #edf0f1;
-    text-decoration: none;
+.hero{
+	width: 100%;
+	height: 100vh;
+	background-image: linear-gradient(rgba(12,3,51,0.3),rgba(12,3,51,0.3));
+	position: relative;
+	padding: 0 5%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+nav{
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 20px 8%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+nav .logo{
+	width: 80px;
+}
+nav .logo:hover{
+	width: 90px;
+}
+
+nav ul li{
+	list-style: none;
+	display: inline-block;
+	margin-left: 40px;
+}
+nav ul li a{
+	text-decoration: none;
+	color: #fff;
+	font-size: 17px;
+	transition: 0.5s;
+}
+.content{
+	text-align: center;
+}
+.content h1{
+	font-size: 160px;
+	color: #fff;
+	font-weight: 600;
+	transition: 0.5s;
+}
+.content h1:hover{
+	-webkit-text-stroke: 2px #fff;
+	color: transparent;
+}
+.content a{
+	text-decoration: none;
+	display: inline-block;
+	color: #fff;
+	font-size: 24px;
+	border: 2px solid #fff;
+	padding: 14px 70px;
+	border-radius: 50px;
+	margin-top: 20px;
+}
+.content a:hover{
+	background: #fff;
+	color: #333;
+}
+nav ul li a:hover{
+	-webkit-text-stroke: 2px #fff;
+	color: transparent;
+}
+.back-video{
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	z-index: -1;
+}
+@media (min-aspect-ratio: 16/9){
+	.back-video{
+		width: 100%;
+		height: auto;
+	}
+}
+@media (max-aspect-ratio: 16/9){
+	.back-video{
+		width: 100%;
+		height: auto;
+	}
+}
+@media (max-aspect-ratio: 16/9){
+	.back-video{
+		width: auto;
+		height: 100%;
+	}
 }
 
 
-header {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 30px 10%;
-}
 
-.logo {
-    cursor: pointer;
-    margin-right: auto;
-}
 
-nav {
-    order: 1;
-}
 
-.nav__links {
-    list-style: none;
-}
 
-.nav__links li {
-    display: inline-block;
-    padding: 0px 20px;
-}
 
-.nav__links li a {
-    transition: all 0.3s ease 0s;
-}
 
-.nav__links li a:hover {
-    color: #0088a9;
-}
-
-.cta {
-    order: 2;
-}
-
-button{
-    margin-left: 20px;
-    padding: 9px 25px;
-    background-color: rgba(0,136,169,1);
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-    
-}
-
-button:hover{
-    background-color: rgba(0,136,169,0.8);
-}
-
-.container {
-    max-width: 960;
-	 margin: 0 auto;
-}
-
-.webpage-bg {
-    width: 100%;
-    background-size: cover; 
-}
-
-h2 {
-    font-size: 3em;
-	 margin: 0;
-	 padding: 0;
-	 text-align: center;
-	 font-family: 'Montserrat';
-	 position: absolute;
-	 left: 50%;
-	 transform: translateX(-50%);
-	 color: white;
-	 background-color: none;
-}
-
-.banner-text {
-    position: absolute;
-	 top: 50%;
-	 left: 30%;
-	 transform: translate('-50%,-50%');
-	 z-index: 5;
-	 width: 45%;
-	 padding: 40px 0;
-	 text-align: center;
-	 border-top-left-radius: 70px;
-	 border-bottom-right-radius: 70px;
-	 background-color: rgb(0,0,0,0.3);
-	 color: #fff;
-	 font-weight: bold;
-	 border: 10px inset #fff;
-}
-
-.banner-text p {
-    padding: 0 8%;
-	 font-family: merienda:
-}
 
